fixed spacing with grid

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -295,7 +295,8 @@ grid-content{
 
 .rectangle-200 {
   position:relative;
-  width: 200%;
+  width:200%;
+  flex-grow: 4;
   overflow: hidden;
 }
 
@@ -366,6 +367,7 @@ grid-content{
 .gradient-vertical {
   width:100%;
   height:2300px;
+  border:0px;
   background: linear-gradient(
     180deg,
     #b0d2de 0%,
